[tool.poetry]
name = "tonescript"
version = "1.0.0"
description = "Python package for working with ToneScript, a syntax for describing the characteristics of the call progress tones used in telephony."
license = "MIT"
authors = ["Gary DeReese <garydereese@sbcglobal.net>"]
readme = "README.md"
#homepage = ""
repository = "https://github.com/gdereese/tonescript"
#documentation = ""
keywords = ["parser", "telephony", "tonescript"]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^0.11.3"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"
pylint = "^2.10.2"
pytest = "^6.2.5"

[tool.poetry.urls]
"Issues" = "https://github.com/gdereese/tonescript/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
